[readme] articles swagger
