# src/routers/api/schemas/openApiProperties.yaml
@@ -1,12 +1,12 @@
 tags:
   - name: Users
-    description: User management
+    description: /api/v1/users 底下的 api
   - name: Todos
-    description: todo list
+    description: 和 todo list 有關的 api
   - name: Articles
-    description: Articles management
+    description: /api/v1/articles 底下的所有 api
   - name: Trails
-    description: Trails management
+    description: /api/v1/trails 底下的所有 api
 
 components:
   securitySchemes:
@@ -18,16 +18,24 @@ components:
       type: apiKey
       name: refreshToken
       in: cookie
+  headers:
+    x-total-count:
+      description: 回傳此搜尋條件下的總資料筆數，用於前端分頁功能。
+      schema:
+        type: integer
+        example: 50
   responses:
     unauthorizedError:
       description: Access token is missing or invalid
     internalError:
       description: internal server error - 後端伺服器錯誤
+    forbiddenAction:
+      description: 權限不足操作此 api
   parameters:
     limit:
       name: limit
       in: query
-      description: 一次 query 帶幾筆資料，max:200。
+      description: 一次 query 帶幾筆資料，max:200。預設值為 20。
       schema:
         type: integer
         example: 20
@@ -48,10 +56,10 @@ components:
     tag:
       name: tag
       in: query
-      description: 以聯集的方式搜尋心得的 tag
+      description: 以聯集的方式搜尋心得的 tag。所有 tag：一日, 多日, 海景, 夜景, 山景, 城市景色, 賞花, 稀有動植物, 有水源, 危險地形, 需專業裝備, 登山小白體驗, 專業老手分享, GPX
       schema:
-        type: string
-        example: 夜景
+        type: array
+        example: [一日, 夜景]
     location:
       name: location
       in: query
